--- a/main.tex
+++ b/main.tex
@@ -84,11 +84,12 @@ backgroundcolor=\color{white},   % choose the background color; you must add \us
 \include{implement}
 \include{comparison}
 \include{conclusion}
+\include{acknowledgement}
 \include{bibliography}
 
 % include some appendix from PDF file that is generated from doc
 \includepdf{appendix/appendix1_proposal.pdf}
-\includepdf{appendix/appendix2_records.pdf}
+\includepdf[pages={1,2}]{appendix/appendix2_records.pdf}
 \includepdf{appendix/appendix3_scores.pdf}
 \includepdf{appendix/appendix4_honest_declaration.pdf}
 \includepdf{appendix/appendix5_evaluation.pdf}
