--- a/bibliography.tex
+++ b/bibliography.tex
@@ -1,56 +1,97 @@
 \begin{thebibliography}{9}
-    \bibitem{fu11} H. Fu and R. G. Clapp, \emph{Eliminating the memory
+  \bibitem{fu11} H. Fu and R. G. Clapp, \emph{Eliminating the memory
     bottleneck: an FPGA-based solution for 3d reverse time migration,}
     in Proceedings of the 19th ACM/SIGDA international symposium on Field
     programmable gate arrays, 2011, pp. 65-74.
 
-    \bibitem{herb11} Herb Sutter, \emph{The Free Lunch Is Over: A Fundamental
+  \bibitem{herb11} Herb Sutter, \emph{The Free Lunch Is Over: A Fundamental
     Turn Toward Concurrency in Software,} Dr. Dobb's Journal, 30(3), March
     2005. Retrieved 21 November 2011.
 
-    \bibitem{yoon03} K. Yoon, C.Chin, S. Suh, L. Lines, and S. Hong.
+  \bibitem{yoon03} K. Yoon, C.Chin, S. Suh, L. Lines, and S. Hong.
     \emph{3D Reverse-time Migration Using the Acoustic Wave Equation:
     An Experience with the SEG/EAGE Data Set.} The Leading Edge, 22(1):38-41,
     2003.
 
-    \bibitem{moore}
+  \bibitem{moore}
     \emph{Moores law, Wikipedia, the free encyclopedia} [online],
     http://en.wikipedia.org/wiki/Moore's\_law.
 
-    \bibitem{shafiq} M. Shafiq, M. Pericas, N. Navarro, and E. Ayguade,
+  \bibitem{shafiq} M. Shafiq, M. Pericas, N. Navarro, and E. Ayguade,
     \emph{A Streaming Based High Performance FPGA Core for 3D Reverse
     Time Migration.}
 
-    \bibitem{top500}
+  \bibitem{river} G. Rivera and C. Tseng.
+    \emph{Tiling Optimizations for 3D Scientific Computations.}
+    In Proc. Supercomputing, 2000.
+
+  \bibitem{navarro} M. Shafiq, M. Pericas, R. de la Cruz, M. Araya-Polo,
+    N. Navarro, and E. Ayguade.
+    \emph{Exploiting Memory
+    Customization in FPGA for 3D Stencil Computations.}
+    In Proc. International Conference on Field
+    Programmable Technology (FPT), pages 38-45, 2009.
+
+  \bibitem{garey} W. Spotz and G. Carey.
+    \emph{A High-Order Compact Formulation for the 3D Poisson Equation.}
+    Numerical Methods for Partial Differential Equations, 1996.
+
+  \bibitem{top500}
     \emph{Top500 super computer sites - November 2012} [online],
     http://www.top500.org
 
-    \bibitem{fpgaintro}
+  \bibitem{zhao} C. He, W. Zhao, and M. Lu.
+    \emph{Time Domain Numerical
+      Simulation for Transient Waves on Reconfigurable
+    Coprocessor Platform.}
+    In Proc. IEEE Symposium on Field-Programmable Custom Computing Machines,
+    pages 127-136, 2005.
+
+  \bibitem{chin}K. Yoon, C.Chin, S. Suh, L. Lines, and S. Hong.
+    \emph{3D Reverse-time Migration Using the Acoustic Wave
+      Equation: An Experience with the SEG/EAGE Data
+    Set. }
+    The Leading Edge, 22(1):38–41, 2003.
+  \bibitem{fpgaintro}
     J. Serrano,
     \emph{DIGITAL SIGNAL PROCESSING USING FIELD PROGRAMMABLE GATE ARRAYS,}
     Proceedings of BIW08, pp. 29-38, 2008.
 
-    \bibitem{fpgaug}
+  \bibitem{fpgaug}
     Xilinx Inc,
     \emph{Xilinx UG331 Spartan-3 Generation FPGA User Guide}
 
-    \bibitem{max_white_paper}
+  \bibitem{migration} Baysal, E., Kosloff, D. D. and Sherwood, J. W. C.,
+    \emph{Reverse time migration}, GEOPHYSICS, Soc. of Expl.
+    Geophys., Vol. 48, p 1514-1524, 1983
+
+  \bibitem{wave}Dablain, M. A.,
+    \emph{The application of high-order
+    differencing to scalar wave equation.} GEOPHYSICS, Soc. of
+    Expl. Geophys., Vol. 51, p 54-66,1986
+
+  \bibitem{shaped} Gwarek, W.K.. {Analysis of Arbitrarily Shaped Two-
+      Dimensional Microwave Circuits by Finite-Difference
+    Time-Domain Method,}
+    IEEE Trans. Microwave Theory and Techniques, vol. 36, no. 4, pp.738-744.
+
+  \bibitem{max_white_paper}
     Maxeler Technologies,
     \emph{MaxCompiler White Paper} [online],
     https://www.maxeler.com/media/documents/MaxelerWhitePaperMaxCompiler.pdf
 
-    \bibitem{rtm}
+  \bibitem{rtm}
     PGS Techlink,
     \emph{Reverse Time Migration} [online],
     http://www.pgs.com/upload/188525/techlink40\_rtm\_sm.pdf
 
-    \bibitem{rtm_psdm}
+  \bibitem{rtm_psdm}
     M. H. Karazincir and C. M. Gerrard,
     \emph{Explicit high-order reversetime pre-stack depth migration,}
     in 76th Annual International Meeting, SEG, Expanded Abstracts, 2006,
     vol. 25, pp. 2353-2357.
 
-    \bibitem{maxcompiler_tutorial}
+  \bibitem{maxcompiler_tutorial}
     \emph{MaxCompilerKernel Compiler Tutorial} [commercial]
 
 \end{thebibliography}
