change document class, from article to report

--- a/acknowledgement.tex
+++ b/acknowledgement.tex
@@ -1,4 +1,4 @@
-\section{Acknowledgement}
+\section*{Acknowledgement}
 
 The thesis is supported from my supervisor Liwen Chen from Education Lab
 Center, Sun Yat-sen University, and my adviser Haohuan Fu from the Center
