--- a/bibliography.tex
+++ b/bibliography.tex
@@ -1,3 +1,4 @@
+\addcontentsline{toc}{chapter}{References}
 \begin{thebibliography}{9}
   \bibitem{fu11} H. Fu and R. G. Clapp, \emph{Eliminating the memory
     bottleneck: an FPGA-based solution for 3d reverse time migration,}
