--- a/seismic.tex
+++ b/seismic.tex
@@ -1,4 +1,4 @@
-\section{Seismic Migration}
+\chapter{Reverse Time Migration Algorithm}
 
 The purpose of the \emph{seismic exploration} is to understand the
 constitution of the interior earth as much as possible. As we know, it is
@@ -26,7 +26,7 @@ more specifically, seismic imaging. By seismic migration, the constitution
 of the interior earth could be imaged, sketching, for example, the water,
 rocks, gas, oil, faults etc in the subsurface.
 
-\subsection{General Process of Seismic Exploration}
+\section{General Process of Seismic Exploration}
 
 Seismic exploration, as one of the background knowledge of this thesis,
 is explained in this section. Figure (\ref{fig:sea_floor_seismic}) shows a
@@ -58,11 +58,11 @@ The detail of how the data are processed is not the topic of this thesis,
 so I won't explain it too much. Those who are interested in the subject can
 find more information with the help of the search engine. In this thesis, I
 only concern about what is relevant with the FPGA implementation of the
-computational part, which is explained in next subsection.
+computational part, which is explained in next section.
 
-\subsection{Reverse Time Migration}
+\section{Reverse Time Migration}
 
-In this subsection, I present a general introduction for Reverse Time
+In this section, I present a general introduction for Reverse Time
 Migration with some seismic terminologies. Revere Time Migration use the
 source and recorded signals as input, following a series of computing, then
 produce an image of the velocity model, which can maps to the real image of
