--- a/implement.tex
+++ b/implement.tex
@@ -1,4 +1,4 @@
-\section{Implementation of RTM} % (fold)
+\chapter{Implementation of RTM} % (fold)
 
 \label{sec:Implementation of FPGA}
 
@@ -14,7 +14,7 @@ logic of the code, and the compiler will then generate the hardware
 description language for the chip. So, you can also be convinced that you
 are communicating with the compiler, rather than the chip directly.
 
-\subsection{Streaming in FPGA} % (fold)
+\section{Streaming in FPGA} % (fold)
 \label{sub:Streaming in FPGA}
 
 To have the whole array processed, the host program (c/c+) usually use the
@@ -94,9 +94,9 @@ the FPGA designer are analyzing the algorithm and trying to cut the
 relationship between the data. The more independent of the data, the easier
 to design the kernel.
 
-% subsection Streaming in FPGA (end)
+% section Streaming in FPGA (end)
 
-\subsection{1D stencil design in FPGA} % (fold)
+\section{1D stencil design in FPGA} % (fold)
 \label{sub:1D stencil design in FPGA}
 
 
@@ -154,7 +154,7 @@ through the window.
 \end{figure}
 
 Any conventional array operation can be expressed in terms of stream
-offsets. In this subsection, we consider the 1D convolution. Figure
+offsets. In this section, we consider the 1D convolution. Figure
 (\ref{fig:array}) shows one way in which the collection of points for
 stencil operator can be expressed in terms of offsets. The current position
 (head of the stream) is A, the other points (three from the future and
@@ -164,9 +164,9 @@ offset technique. Listing (\ref{lst:1d_stencil}) gives a code snippet of 1D
 stencil kernel designing.
 
 
-% subsection 1D stencil design in FPGA (end)
+% section 1D stencil design in FPGA (end)
 
-\subsection{Forward Migration } % (fold)
+\section{Forward Migration } % (fold)
 \label{sub:Forward Migration }
 
 There are two parts of Reverse Time Migration, the first part is
@@ -197,7 +197,7 @@ calculation) to the FPGA kernel. The kernel need to implement the pseudo
 code in Listing (\ref{lst:part_of_forward_modeling}).
 
 
-\subsubsection{Transform The Loops} % (fold)
+\subsection{Transform The Loops} % (fold)
 \label{ssub:Transform the lo}
 It is a very simple control statement in the host code, but it is not in
 the FPGA implementation. As you are designing the logic of FPGA, connecting
@@ -207,7 +207,7 @@ some alternatives to implement the same function.
 
 As for the loops, the stream offset can be used to access the elements
 in the past or at the future, which is explained in  the previous
-subsection. However, in this part, we need to mimic the nest loop
+section. However, in this part, we need to mimic the nest loop
 controlling but what we explained is the single loop rather than the
 nest loops. Is there any ways to mimic the nest loop in the FPGA kernel?
 
@@ -255,9 +255,9 @@ detail is explained.
 
 \end{enumerate}
 
-% subsubsection Transform the lo (end)
+% subsection Transform the lo (end)
 
-\subsubsection{Transform The Branches} % (fold)
+\subsection{Transform The Branches} % (fold)
 \label{ssub:Transform The Br}
 Another question is how to mimic the logical \emph{if/else} branch in the
 kernel. The \emph{if/else} statement is part of the high level language,
@@ -271,10 +271,10 @@ logical OR (||)
 operators, because it is impossible to replicate th conditional evaluation
 (or ``short-circuiting'') semantics in a data flow kernel. We can use the
 bit-wise OR (|) and bit-wise AND (\&) to replace them.
-% subsubsection Transform The Br (end)
+% subsection Transform The Br (end)
 
-\subsubsection{Additional Improvement} % (fold)
-The main part of design is described in the previous subsection, it is not
+\subsection{Additional Improvement} % (fold)
+The main part of design is described in the previous section, it is not
 feasible enough however, because most of the dimension, or the coefficients
 are hard coded in the kernel. Building the kernel in the FPGA hardware
 takes lots of time, from hours to weeks, so it is important to build a
@@ -288,27 +288,27 @@ Dataflow Programming with MaxCompiler\cite{maxcompiler_tutorial}.
 
 \label{ssub:Additional improvement}
 
-% subsubsection Additional improvement (end)
+% subsection Additional improvement (end)
 
-% subsection Forward modeling implement (end)
+% section Forward modeling implement (end)
 
-\subsection{Reverse Migration} % (fold)
+\section{Reverse Migration} % (fold)
 
 Reverse Migration is the second part of Reverse Time Migration. We adjust
 the input of the kernel and control the timestamps. In this part, we can
-use the same kernel as that is used in the forward migration. It is the 
-most important part of the algorithm because it is responsible for 
-generating the image of the subsurface. 
+use the same kernel as that is used in the forward migration. It is the
+most important part of the algorithm because it is responsible for
+generating the image of the subsurface.
 
-The computation complexity is the same as the forward migration, but the 
-data varies. The result wave fields of the forward migration should be 
-kept, because they are needed in this step. The most 
-computationally-demanding part has handed over to the FPGA kernel, which is 
-the same as the previous one. The host code set the different the input 
-streams and coefficients for both forward migration and reverse migration. 
+The computation complexity is the same as the forward migration, but the
+data varies. The result wave fields of the forward migration should be
+kept, because they are needed in this step. The most
+computationally-demanding part has handed over to the FPGA kernel, which is
+the same as the previous one. The host code set the different the input
+streams and coefficients for both forward migration and reverse migration.
 So, more work is controlled by the host code.
 
 \label{sub:Reverse Mi}
 
-% subsection Reverse Mi (end)
+% section Reverse Mi (end)
 % section Implementation of FPGA (end)
